<resources>
    <string name="bianji">编辑yo·秀</string>
    <string name="yoxiu">yo·秀</string>
    <string name="yoji">yo·记</string>
    <string name="shoot">拍摄</string>
    <string name="NetException">网络异常</string>
    <string name="ServiceException">服务器异常</string>
    <string name="NetByMobile">手机网络连接成功</string>
    <string name="NetByWifi">无线网络连接成功</string>
    <string name="netexception">Unable to resolve host \"app.xinzhidi.com\": No address associated with hostname</string>
    <string name="HTTP404">HTTP 404 Not Found</string>
    <string name="update_download_finish">下载完成</string>
    <string name="update_download_start">开始下载</string>
    <string name="update_download_failed">下载失败</string>
    <string name="update_download_progressing">正在下载</string>
    <string name="system_download_component_disable">下载服务不可用,请您启用</string>
    <string name="system_download_description">版本更新</string>
    <string name="sure">确认</string>
    <string name="bianji_yoji">编辑yo·记</string>
    <string name="shier">十二使徒岩</string>
    <string name="genghuan">更换</string>
    <string name="title_dialog">友情提示</string>
    <string name="message_permission_failed">尚未获取SD卡读取权限</string>
    <string name="message_permission_rationale">获取SD卡读取权限</string>
    <string name="btn_dialog_yes_permission">去设置</string>
    <string name="btn_dialog_no_permission">取消</string>
    <string name="message_setting_back">用户从设置回来了</string>
    <string name="message_post_succeed">获取SD卡权限成功</string>
    <string name="message_post_failed">获取SD卡权限失败</string>
    <string name="gushi">给大家讲讲背后的故事吧~</string>
    <string name="tuijian">推荐话题</string>
    <string name="huati">+更多话题</string>
    <string name="xuanze">选择频道</string>
    <string name="gongkai">公开</string>
    <string name="simi">私密</string>
    <string name="search_location">请输入搜索位置yo～</string>
    <string name="app_name">yoyoGo</string>
    <string name="title">账号与安全</string>
    <string name="VX">微信</string>
    <string name="WB">微博</string>
    <string name="QQ">QQ</string>
    <string name="binding">已绑定</string>
    <string name="Nobinding">未绑定</string>
    <string name="phonenumber">18511193840</string>
    <string name="hi">Hi～</string>
    <string name="qingxuanzebuxihaundeliyou">请选择不喜欢的理由</string>
    <string name="rangwmdeneironggengyouxiiu">让我们的内容更优质yo～</string>
    <string name="buxihuancilei">不喜欢此类</string>
    <string name="buxihuancixiang">不喜欢此项</string>
    <string name="replace">更换手机号</string>
    <string name="placephone">请输入手机号</string>
    <string name="verifycode">请输入短信验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="instantly">立即更换</string>
    <string name="about">关于我们</string>
    <string name="edition">yoyoGo  V1.0</string>
    <string name="wxpublic">微信公众号</string>
    <string name="diary">折耳妮的旅行日记</string>
    <string name="sina">新浪微博</string>
    <string name="chick">折耳妮小妞</string>
    <string name="praise">表扬一下</string>
    <string name="protocolone">隐私政策</string>
    <string name="protocoltow">服务条款</string>
    <string name="company">悠悠行旅（北京）信息科技有限公司</string>
    <string name="companytow">©2018 yoyoGo All Rights Reserved</string>
    <string name="opinion">意见反馈</string>
    <string name="submit">提交</string>
    <string name="opiniontext">你的意见会让我们变得更好yo～</string>
    <string name="phone">手机</string>
    <string name="you">你的「表扬」</string>
    <string name="yes">是我们最大的动力yo～</string>
    <string name="leave">狠心离开</string>
    <string name="settings">设置</string>
    <string name="newmessage">新消息提醒</string>
    <string name="visit">访问通讯录</string>
    <string name="wifi">Wi-Fi环境下自动播放视频</string>
    <string name="account">账号与安全</string>
    <string name="version">当前版本</string>
    <string name="versionnumber">V1.0</string>
    <string name="empty">清空缓存</string>
    <string name="emptyNumber">8M</string>
    <string name="over">资料完善成功!</string>
    <string name="place">请你吃小鱼干yo~</string>
    <string name="yo">__yoyoGo</string>
    <string name="my">我的</string>
    <string name="my_name">Anne</string>
    <string name="my_fans">粉丝</string>
    <string name="my_follow">关注</string>
    <string name="my_day">累计打卡 183 天</string>
    <string name="my_exceed">超过了全国67%的用户哦！</string>
    <string name="my_but">点击打卡</string>
    <string name="my_home">我的主页</string>
    <string name="my_draft">我的草稿</string>
    <string name="my_like">我喜欢过</string>
    <string name="my_col">我的收藏</string>
    <string name="my_set">我的设置</string>
    <string name="quxiao">取消</string>
    <string name="pleaseinput">请输入在哪里yo~</string>
    <string name="photo">照片/图片位置信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="binding_phone_phone">请输入手机号</string>
    <string name="binding_phone_verification">请输入验证码</string>
    <string name="binding_phone_obtain_validation">获取验证码</string>
    <string name="binding_phone_accept">我已阅读并接受</string>
    <string name="binding_phone_service">服务条款＆隐私政策</string>
    <string name="binding_phone_binding">立即绑定</string>
    <string name="done">完成</string>
    <string name="indext_title_recommend">推荐</string>
    <string name="indext_title_attention">关注</string>
    <string name="str_attention_person">关注的人</string>
    <string name="str_mei_pai">美·拍</string>
    <string name="str_zu_ji">足·迹</string>
    <string name="str_all">ALL</string>
    <string name="str_look_more">查看更多</string>
    <string name="double_tap_to_exit">再按一次退出App</string>
    <string name="str_create">直接创建</string>
    <string name="str_open_cam">启动相机</string>
    <string name="str_open_xiangce">从相册选</string>
    <string name="str_cancel">取消</string>
    <string name="str_search_histroy">历史搜索</string>
    <string name="str_clear">清空</string>
    <string name="str_search_hot">热门搜索</string>
    <string name="str_search_type_desc">筛选</string>
    <string name="str_zuji">yo记</string>
    <string name="str_meipai">yo秀</string>
    <string name="str_search_input_tips">请输入搜索内容</string>
    <string name="str_add_attention">+ 关注</string>
    <string name="unlock_black">解绑</string>
    <string name="lock_black">拉黑</string>
    <string name="str_add_attention2">添加关注</string>
    <string name="input_phone_num">请输入电话号码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="input_ver_code">请输入验证码</string>
    <string name="reg_desc"><![CDATA[我已阅读并接受]]></string>
    <string name="reg_at"><![CDATA[&]]></string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="login_by_third">第三方账号快速登录</string>
    <string name="input_wrong_phone_num">手机号码输入错误</string>
    <string name="input_wrong_ver_code">验证码输入错误</string>
    <string name="input_wrong_xieyi">尚未同意服务协议</string>
    <string name="yo_tips">yo提示</string>
    <string name="cancel">取消</string>
    <string name="open">打开</string>
    <string name="bind_phone_num">绑定手机号</string>
    <string name="bind_phone_safe_desc">绑定手机号，让您的账户更安全</string>
    <string name="bind_phone_now">立即绑定</string>
    <string name="phone_change_now">立即更换</string>
    <string name="change_phone_num">更改手机号</string>
    <string name="weixin_gongzhonghao">微信公众号</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="str_weibo">微博</string>
    <string name="biaoyang">表扬一下</string>
    <string name="black">黑名单</string>
    <string name="wechat">微信</string>
    <string name="new_message_remind">新消息提醒</string>
    <string name="tongxunlu">访问通讯录</string>
    <string name="account_and_safe">账号与安全</string>
    <string name="privary_setting">隐私设置</string>
    <string name="feedback_question">问题与反馈</string>
    <string name="about_us">关于我们</string>
    <string name="now_version">当前版本</string>
    <string name="clear_temp_cache">清空缓存</string>
    <string name="setting">设置</string>
    <string name="feed_back">意见反馈</string>
    <string name="str_biaoyang">您的表扬</string>
    <string name="str_tk_nodeata">此处还没有人上传过Yo秀哦~</string>
    <string name="str_biaoyang_desc">是我最大的动力</string>
    <string name="str_next_time">下次再说</string>
    <string name="str_next_step">下一步</string>
    <string name="yoyogo_open_qq">yoyoGo想打开QQ</string>
    <string name="yoyogo_open_wechat">yoyoGo想打开微信</string>
    <string name="yoyogo_open_weibo">yoyoGo想打开微博</string>
    <string name="fabu_yoji">发布yo迹</string>
    <string name="fabu_yoxiu">发布yo秀</string>
    <string name="location_now">当前位置</string>
    <string name="loaction_again">重新定位</string>
    <string name="location_again_now">重新定位中...</string>
    <string name="locationing">正在定位...</string>
    <string name="loaction_failed">定位失败</string>
    <string name="share_your_story">说出你的故事吧~</string>
    <string name="str_tongbu">同步到:</string>
    <string name="str_confirm">确定</string>
    <string name="str_detail">详情</string>
    <string name="str_fayoxiu">发yo秀</string>
    <string name="str_fayoji">写yo迹</string>
    <string name="str_fabu">发布</string>
    <string name="str_choice_fenlei">选择分类</string>
    <string name="str_choice_channel">选择频道</string>
    <string name="__picker_title">Images</string>
    <string name="__picker_delete">Delete</string>
    <string name="__picker_done">Done</string>
    <string name="__picker_done_with_count">Done(%1$d/%2$d)</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_undo">Undo</string>
    <string name="__picker_deleted_a_photo">Deleted a photo</string>
    <string name="__picker_confirm_to_delete">Confirm to delete?</string>
    <string name="__picker_yes">Yes</string>
    <string name="__picker_cancel">Cancel</string>
    <string name="__picker_all_image">All Images</string>
    <string name="__picker_image_count">%1$d</string>
    <string name="__picker_over_max_count_tips">You can only select %1$d images</string>
    <string name="__picker_choice_photo">选择照片</string>
    <string name="user_info_title">个人信息</string>
    <string name="save">保存</string>
    <string name="base_info">基本信息</string>
    <string name="other_info">其他信息</string>
    <string name="str_i_like_title">我喜欢过</string>
    <string name="str_attention">关注</string>
    <string name="str_invitation">邀请</string>
    <string name="wechat_friend">微信好友</string>
    <string name="weibo_friend">微博好友</string>
    <string name="qq_friend">QQ好友</string>
    <string name="tongxulu_friend">通讯录好友</string>
    <string name="str_sys_message">系统消息</string>
    <string name="str_like_me">喜欢我的</string>
    <string name="str_comment_msg">评论消息</string>
    <string name="str_attention_msg">关注消息</string>
    <string name="str_message_center">消息中心</string>
    <string name="str_attention_message">关注消息</string>
    <string name="str_shoucang">收藏</string>
    <string name="str_fans">粉丝</string>
    <string name="str_yoji">yo迹</string>
    <string name="str_yoxiu">yo秀</string>
    <string name="str_my_draft">我的草稿</string>
    <string name="str_create_collection_package">创建收藏夹</string>
    <string name="str_moments">朋友圈</string>
    <string name="str_qq_firend">QQ好友</string>
    <string name="str_hotel">酒店</string>
    <string name="str_food">餐饮</string>
    <string name="str_shopping">购物</string>
    <string name="str_feature">景点</string>
    <string name="str_other">其他</string>
    <string name="str_report_ad">广告内容</string>
    <string name="str_report_harmful">有害信息</string>
    <string name="str_report_not_allowed">违法违规</string>
    <string name="nihaimeiyoushouchang">你还木有收藏yo～</string>
    <string name="biedexiaopenyoudouyouchangchangneirongle">别的小朋友都有收藏的内容了</string>
    <string name="nishengmeshihoucaishouchangya">你什么时候才收藏呀?</string>
    <string name="mashangqu">马上去</string>
    <string name="shouye">首页</string>
    <string name="zhaoxihuandeneirong">找喜欢的内容！</string>
    <string name="nihaimeiyoushoudaoxiaoxi">你还木有收到消息yo～</string>
    <string name="fabuyouji">发布yo·记</string>
    <string name="huo">或</string>
    <string name="fabuyouxiu">发布yo·秀</string>
    <string name="geiwomenyigexihuannidejihui">给我们一个喜欢你的机会！</string>
</resources>