<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_collection_null"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/shoucang_kong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/nihaimeiyoushouchang"
        android:textColor="@color/c333333"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/biedexiaopenyoudouyouchangchangneirongle"
        android:textColor="@color/c888888"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/nishengmeshihoucaishouchangya"
        android:textColor="@color/c888888"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mashangqu"
            android:textColor="@color/c888888"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shouye"
            android:textColor="@color/FA800A"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhaoxihuandeneirong"
            android:textColor="@color/c888888"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginRight="@dimen/dp_30"
        android:src="@mipmap/tabxian" />


</LinearLayout>