<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/like_layout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/blank_msg" />

    <TextView
        android:id="@+id/tv_stamp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/nihaimeiyoushoudaoxiaoxi"
        android:textColor="@color/color333333"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/publish_yoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fabuyouji"
            android:textColor="@color/FA800A"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huo"
            android:textColor="@color/c888888"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/publish_yoxiu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fabuyouxiu"
            android:textColor="@color/FA800A"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@mipmap/tabxian" />

        <View
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@mipmap/tabxian" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/geiwomenyigexihuannidejihui"
        android:textColor="@color/c888888"
        android:textSize="@dimen/sp_15" />


</LinearLayout>