<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@drawable/border_radius"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/my_clock_iv_id"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp_10"
            android:src="@mipmap/daka" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/my_clock_iv_id"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_day_tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_day"
                android:textColor="#333333"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/my_exceed_tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_exceed"
                android:textColor="#333333"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/my_clock_but_id"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"

            android:layout_margin="@dimen/dp15"
            android:background="@drawable/radius_but"
            android:gravity="center"
            android:text="@string/my_but"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

</RelativeLayout>